--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Short Description"
+  name             : "About Me"
   avatar           : "profile.png"
   bio              : "I'm currently pursuing Ph.D in Epidemiology and Biostatistics at University of Nevada, Las Vegas. I'm interested in statistics and genomics!"
   location         : "Las Vegas, Nevada, USA"
