--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "University of Nevada, Las Vegas, Nevada Institute of Personalized Medicine"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=IxZPqEkAAAAJ&hl=en"
-  email            : #"jungjongyun83@gmail.com
+  email            : "jungjongyun83@gmail.com
   researchgate     : 
   uri              :
   bitbucket        :
