--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "University of Nevada, Las Vegas, Nevada Institute of Personalized Medicine"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=IxZPqEkAAAAJ&hl=en"
-  email            : "jungjongyun83@gmail.com
+  email            : "jungjongyun83@gmail.com"
   researchgate     : 
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"https://www.linkedin.com/in/jongyun-john-jung-05a15479/?locale=en_US"
+  linkedin         : "https://www.linkedin.com/in/jongyun-john-jung-05a15479/?locale=en_US"
   orcid            : "https://orcid.org/0000-0002-9258-5397"
   pinterest        :
   soundcloud       :
