--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jongyun-john-jung-05a15479/?locale=en_US"
+  linkedin         : "https://www.linkedin.com/in/jongyun-john-jung-05a15479/"
   orcid            : "https://orcid.org/0000-0002-9258-5397"
   pinterest        :
   soundcloud       :
