--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/jystatistics"
+  github           : "github.com/jystatistics"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jongyun-john-jung-05a15479/"
+  linkedin         : "www.linkedin.com/in/jongyun-john-jung-05a15479/"
   orcid            : "https://orcid.org/0000-0002-9258-5397"
   pinterest        :
   soundcloud       :
